# wgpucraft

./: !7zip.ps1  !md-dump.ps1  .gitignore  BUILD_AND_RUN.md  CONFIG.md  Cargo.toml  MULTIPLAYER_TEST.md  QA_CHECKLIST.md  README.md  agent.md  config.json  project_dump.md  ТЗ.md
assets/fonts/: MatrixSans-Regular.json
assets/shaders/: shader.wgsl  text.wgsl
assets/ui/: menu.ron  menu_advanced.ron  menu_main.ron  menu_settings.ron  styles.ron
src/: launcher.rs  lib.rs  main.rs
src/core/: config.rs
src/ecs/: component.rs  entity.rs  mod.rs  system.rs  universe.rs
src/hud/: icons_atlas.rs  mod.rs
src/player/: camera.rs  mod.rs  raycast.rs
src/render/: atlas.rs  binding.rs  buffer.rs  consts.rs  mesh.rs  mod.rs  model.rs  renderer.rs  texture.rs
src/render/pipelines/: hud.rs  mod.rs  terrain.rs
src/terrain_gen/: biomes.rs  block.rs  chunk.rs  generator.rs  mod.rs
src/text/: atlas.rs  cache.rs  font.rs  layout.rs  mod.rs  renderer.rs
src/ui/: elements.rs  font.rs  layout.rs  loader.rs  mod.rs  renderer.rs  style.rs
