[package]
name = "wgpucraft"
version = "0.1.0"
edition = "2024"


[features]
default = []  # без tracy по умолчанию
tracy = ["dep:tracy-client", "dep:tracing-tracy"]  # флаг для включения

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.16.0"
wgpu = "24.0.0"
log = "0.4.27"
env_logger = "0.10.1"
tokio = { version = "1.41.0", default-features = false, features = ["rt"] }
winit = { version = "0.29.15", features = ["rwh_05"]}
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0.79"
clap = "4.5.1"
instant = "0.1" #because std::time::Instant panics on WASM
rayon = "1.5"
block-mesh = "0.2.0"
noise = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.3.0"

# tracy-client = { version = "0.18", default-features = false }
# tracing-tracy = "0.11.4"
# Tracy только через feature
tracy-client = { version = "0.18", default-features = false, optional = true }
tracing-tracy = { version = "0.11.4", optional = true }


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.79"
fs_extra = "1.3.0"
glob = "0.3.1"
 

